--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="Kelvin Tegelaar" />
-    <title>CIPP - CyberDrain Improved Partner Portal</title>
+    <title>YWAPP - Advanced Partner Portal</title>
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/dataTables.bootstrap5.min.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
@@ -460,7 +460,7 @@
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
                                             <div class="flex-grow-1">
-                                                <div class="small fw-bold text-info mb-1">Your CIPP Version</div>
+                                                <div class="small fw-bold text-info mb-1">YWAPP Version</div>
                                                 <div class="h5" id="dashversionlocalcipp">
                                                     <div class="spinner-border text-primary" role="status">
                                                         <span class="sr-only"></span>
@@ -468,7 +468,7 @@
                                                 </div>
                                             </div>
                                             <div class="flex-grow-1">
-                                                <div class="small fw-bold text-info mb-1">Latest CIPP Version</div>
+                                                <div class="small fw-bold text-info mb-1">Latest YWAPP Version</div>
                                                 <div class="h5" id="dashversionremotecipp">
                                                     <div class="spinner-border text-primary" role="status">
                                                         <span class="sr-only"></span>
